assets/css/pinned.scss
@import "variables.scss";

#pinned-cotos {
  flex: 1;
  position: relative;

  div.column-header {
    text-align: center;
    font-size: 18px;
    color: gray;
    text-transform: uppercase;
    margin-bottom: 5px;
    padding-top: 5px;
  }
}

#pinned-cotos-body {
  position: absolute;
  top: 10px;
  bottom: 0;
  left: 0;
  right: 0;

  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 10px;
  padding-top: 20px;
  padding-bottom: 50px;

  display: flex;
  justify-content: center; 

  @media (#{$wide-viewport}) {
    padding: 5px;
    padding-top: 20px;
    padding-bottom: 50px;
  }

  div.pinned-coto {
    flex: 1;
    min-width: 460px;
    max-width: 640px;
    margin-top: 10px;
    margin-bottom: 20px;
    animation-duration: 1s;

    & > div.coto-inner > div.coto-header {
      i.pinned,
      i.connected {
        display: none;
      }
    }

    div.unpin-button {
      position: relative;
      height: 10px;

      a.unpin,
      span.not-unpinnable {
        position: absolute;
        top: -12px;
        left: 0;

        i {
          font-size: 24px;
        }
      }

      span.not-unpinnable {
        color: #ccc;
      }
    }
  }
}

